--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
 	"name": "tauri-app",
 	"private": true,
-	"version": "0.0.7",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
@@ -11,6 +10,7 @@
 	},
 	"dependencies": {
 		"@tauri-apps/api": "^2",
+		"@tauri-apps/plugin-dialog": "~2",
 		"@tauri-apps/plugin-opener": "^2",
 		"@tauri-apps/plugin-updater": "~2",
 		"react": "^18.3.1",
